Move .scss files to their components

--- a/src/components/pages/FinishPage.module.scss
+++ b/src/components/pages/FinishPage.module.scss
@@ -17,7 +17,7 @@
     height: 400px;
     flex-shrink: 0;
 
-    background: url("../data/img/finish.png") center/100% 100% no-repeat;
+    background: url("../../data/img/finish.png") center/100% 100% no-repeat;
   }
   .title {
     flex-shrink: 0;
