--- a/src/components/pages/TextPage.module.scss
+++ b/src/components/pages/TextPage.module.scss
@@ -25,6 +25,6 @@
     height: 30px;
     flex-shrink: 0;
 
-    background: url("../data/img/tilde.png") center/100% 100% no-repeat;
+    background: url("../../data/img/tilde.png") center/100% 100% no-repeat;
   }
 }
