--- a/src/components/controls/CardOptions.module.scss
+++ b/src/components/controls/CardOptions.module.scss
@@ -1,7 +1,15 @@
 .options {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   font-weight: 700;
   font-size: 25px;
+}
+
+.oneDigit {
+  width: 28.69px;
+  text-align: center;
+}
+.selected {
+  color: #FDD207;
 }
