Change structure in controls directory

--- a/src/components/controls/shared/PlusButton.module.scss
+++ b/src/components/controls/shared/PlusButton.module.scss
@@ -1,4 +1,4 @@
-@import "src/components/shared/MinusButton.module";
+@import "src/components/controls/shared/MinusButton.module.scss";
 
 .verticalRect {
     position: absolute;
