--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -16,6 +16,9 @@
       line-height: 56.54px;
       color: #2B3172;
     }
+    .noneTitle {
+      visibility: hidden;
+    }
     .image {
       width: 200px;
       height: 80px;
