--- a/src/components/pages/GamePage.module.scss
+++ b/src/components/pages/GamePage.module.scss
@@ -1,10 +1,10 @@
 .page {
   position: absolute;
-  margin-top: -50px;
-  margin-left: -350px;
-  top: 50%;
-  left: 50%;
-  width: 700px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,10 +15,10 @@
   color: #371548;
   font-size: 35px;
   .leftPart {
-
+    position: absolute;
   }
   .rightPart {
-
+    position: absolute;
   }
   .tilde {
     width: 60px;
