--- a/src/components/controls/shared/MinusButton.module.scss
+++ b/src/components/controls/shared/MinusButton.module.scss
@@ -6,12 +6,16 @@
   cursor: pointer;
   margin-right: 12px;
   position: relative;
+
   .horizontalRect {
     position: absolute;
     height: 6px;
     width: 28px;
     background-color: black;
     margin: auto;
-    top: 0; left: 0; bottom: 0; right: 0;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 }
